--- a/index.html
+++ b/index.html
@@ -46,7 +46,54 @@
 				</div>
 			</div>
 		</div>
-		<main class="main-content">main-content</main>
+		<main class="main-content">
+			<section class="our-collection">
+				<img class="our-collaction__img-one" src="img/Vector.png" alt="least" width="402" height="300" />
+				<img class="our-collaction__img-two" src="img/Vector (1).png" alt="least" width="402" height="300" />
+				<img class="our-collaction__img-three" src="img/vector(2).png" alt="least" width="402" height="300" />
+				<div class="container our-collection__container">
+					<h2 class="our-collection__title">our collection</h2>
+					<ul class="our-collection__list">
+						<li class="our-collection__item">
+							<img class="our-collaction__img" src="img/danche.png" alt="Danche" width="450" height="375" title="Danche" />
+							<div class="our-collection__item-info">
+								<h2 class="our-collection__item-info__title">Danche</h2>
+								<p class="our-collection__item-info__text">
+									Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+								</p>
+							</div>
+						</li>
+						<li class="our-collection__item">
+							<img class="our-collaction__img2" src="img/gran espresso.png" alt="Danche" width="450" height="375" title="Danche" />
+							<div class="our-collection__item-info">
+								<h2 class="our-collection__item-info__title">Gran Espresso</h2>
+								<p class="our-collection__item-info__text">
+									Light and flavorful blend with cocoa and black pepper for an intense experience.
+								</p>
+							</div>
+						</li>
+						<li class="our-collection__item">
+							<img class="our-collaction__img" src="img/piccollo.png" alt="Danche" width="450" height="375" title="Danche" />
+							<div class="our-collection__item-info">
+								<h2 class="our-collection__item-info__title">Piccollo</h2>
+								<p class="our-collection__item-info__text">
+									Mild and smooth blend featuring notes of toasted almond and dried cherry.
+								</p>
+							</div>
+						</li>
+						<li class="our-collection__item">
+							<img class="our-collaction__img2" src="img/planalto .png" alt="Danche" width="450" height="375" title="Danche" />
+							<div class="our-collection__item-info">
+								<h2 class="our-collection__item-info__title">Planalto</h2>
+								<p class="our-collection__item-info__text">
+									Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</main>
 		<footer class="site-footer">site-footer</footer>
 	</body>
 </html>
