--- a/index.html
+++ b/index.html
@@ -93,6 +93,48 @@
 					</ul>
 				</div>
 			</section>
+			<!-- INDEX_COLLACTION -->
+			<section class="index-collaction">
+				<div class="container index-collaction__inner">
+					<div class="index-collaction__info">
+						<h2 class="index-collaction__title">Why choose us?</h2>
+						<p class="index-collaction__text">
+							A large part of our role is choosing which particular coffees will be featured in our range. This means working
+							closely with the best coffee growers to give you a more impactful experience on every level.
+						</p>
+					</div>
+					<ul class="index-collaction__list">
+						<li class="index-collaction__item">
+							<img
+								class="index-collaction__item-logo"
+								src="img/Group.svg"
+								alt="index-collaction-logo"
+								width="
+							128"
+								height="136" />
+							<img class="index-collaction__img" src="img/Rectangle 681.svg" alt="Best quality" width="433" height="500" />
+							<h3 class="index-collaction__item-title">Best quality</h3>
+							<p class="index-collaction__item-text">
+								Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+							</p>
+						</li>
+						<li class="index-collaction__item">
+							<img class="index-collaction__img" src="img/Rectangle 682.svg" alt="Exclusive benefits" width="433" height="500" />
+							<h3 class="index-collaction__item-title">Exclusive benefits</h3>
+							<p class="index-collaction__item-text">
+								Special offers and swag when you subscribe, including 30% off your first shipment.
+							</p>
+						</li>
+						<li class="index-collaction__item">
+							<img class="index-collaction__img" src="img/Rectangle 683.svg" alt="Free shipping" width="433" height="500" />
+							<h3 class="index-collaction__item-title">Free shipping</h3>
+							<p class="index-collaction__item-text">
+								We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+							</p>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
 		<footer class="site-footer">site-footer</footer>
 	</body>
