--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header class="site-header">
 				<div class="container site-header__container">
 					<a class="site-logo" href="/">
-						<img class="site-logo__img" src="img/logo.svg" alt="logo" width="235" height="24" />
+						<img class="site-logo__img" src="img/iconca.svg" alt="logo" width="235" height="24" />
 					</a>
 					<ul class="site-nav">
 						<li class="site-nav__item">
@@ -42,8 +42,8 @@
 						<button class="btn">Create your plan</button>
 					</div>
 					<div class="hero__img-wrapper">
-						<img class="hero__img-wrapper__logo" src="img/hero-logo.png" alt="hero-logo" width="160" height="160" />
-						<img src="img/hero-img.jpg" alt="hero-img" width="710" height="696" title="coupitino" />
+						<img class="hero__img-wrapper__logo" src="img/iconca1.png" alt="hero-logo" width="160" height="160" />
+						<img src="img/asosiy rasm.jpg" alt="hero-img" width="710" height="696" title="coupitino" />
 					</div>
 				</div>
 			</div>
@@ -51,13 +51,13 @@
 		<main class="main-content">
 			<section class="our-collection">
 				<div class="container our-collection__container">
-					<img class="our-collaction__img-one" src="img/our-collaction-one.png" alt="least" width="402" height="300" />
-					<img class="our-collaction__img-two" src="img/our-collaction-two.png" alt="least" width="402" height="300" />
-					<img class="our-collaction__img-three" src="img/our-collaction-three.png" alt="least" width="402" height="300" />
+					<img class="our-collaction__img-one" src="img/vector 1img.png" alt="least" width="402" height="300" />
+					<img class="our-collaction__img-two" src="img/vector 2img.png" alt="least" width="402" height="300" />
+					<img class="our-collaction__img-three" src="img/vector 3img.png" alt="least" width="402" height="300" />
 					<h2 class="our-collection__title">our collection</h2>
 					<ul class="our-collection__list">
 						<li class="our-collection__item">
-							<img class="our-collaction__img" src="img/kopi4.png" alt="Danche" width="450" height="375" title="Danche" />
+							<img class="our-collaction__img" src="img/danche.png" alt="Danche" width="450" height="375" title="Danche" />
 							<div class="our-collection__item-info">
 								<h2 class="our-collection__item-info__title">Danche</h2>
 								<p class="our-collection__item-info__text">
@@ -66,7 +66,7 @@
 							</div>
 						</li>
 						<li class="our-collection__item">
-							<img class="our-collaction__img2" src="img/kopi1 copy.png" alt="Danche" width="450" height="375" title="Danche" />
+							<img class="our-collaction__img2" src="img/gran espresso.png" alt="Danche" width="450" height="375" title="Danche" />
 							<div class="our-collection__item-info">
 								<h2 class="our-collection__item-info__title">Gran Espresso</h2>
 								<p class="our-collection__item-info__text">
@@ -75,7 +75,7 @@
 							</div>
 						</li>
 						<li class="our-collection__item">
-							<img class="our-collaction__img" src="img/kopi3.png" alt="Danche" width="450" height="375" title="Danche" />
+							<img class="our-collaction__img" src="img/piccollo.png" alt="Danche" width="450" height="375" title="Danche" />
 							<div class="our-collection__item-info">
 								<h2 class="our-collection__item-info__title">Piccollo</h2>
 								<p class="our-collection__item-info__text">
@@ -84,7 +84,7 @@
 							</div>
 						</li>
 						<li class="our-collection__item">
-							<img class="our-collaction__img2" src="img/kopi2.png" alt="Danche" width="450" height="375" title="Danche" />
+							<img class="our-collaction__img2" src="img/planalto .png" alt="Danche" width="450" height="375" title="Danche" />
 							<div class="our-collection__item-info">
 								<h2 class="our-collection__item-info__title">Planalto</h2>
 								<p class="our-collection__item-info__text">
@@ -109,7 +109,7 @@
 						<li class="index-collaction__item">
 							<img
 								class="index-collaction__item-logo"
-								src="img/index-collaction.svg"
+								src="img/Group.svg"
 								alt="index-collaction-logo"
 								width="
 							128"
@@ -141,7 +141,7 @@
 			<section class="how-it-works">
 				<div class="container">
 					<div class="how-it-works__inner">
-						<img class="how-it-works__img" src="img/how-it-works-planet.svg" alt="coffe" width="192" height="129" />
+						<img class="how-it-works__img" src="img/sticker-3 1.png" alt="coffe" width="192" height="129" />
 						<h2 class="how-it-works__title">How it works</h2>
 						<div class="how-it-works__kvadrat">
 							<div class="how-it-works__kvadrat-inner"></div>
@@ -191,7 +191,7 @@
 			<footer class="site-footer">
 				<div class="container site-footer__container">
 					<a class="site-logo" href="/">
-						<img class="site-logo__img" src="img/logo.svg" alt="logo" width="235" height="24" />
+						<img class="site-logo__img" src="img/iconca.svg" alt="logo" width="235" height="24" />
 					</a>
 					<ul class="site-nav">
 						<li class="site-nav__item">
@@ -206,7 +206,7 @@
 					</ul>
 					<ul class="site-footer__top-list">
 						<li class="site-footer__top-item">
-							<a class="site-footer__top-link" href="https://t.me/tensai1502" target="_blank">
+							<a class="site-footer__top-link" href="https://t.me/muhammad_2807" target="_blank">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM17.568 8.16C17.388 10.056 16.608 14.664 16.212 16.788C16.044 17.688 15.708 17.988 15.396 18.024C14.7 18.084 14.172 17.568 13.5 17.124C12.444 16.428 11.844 15.996 10.824 15.324C9.636 14.544 10.404 14.112 11.088 13.416C11.268 13.236 14.34 10.44 14.4 10.188C14.412 10.152 14.412 10.044 14.34 9.972C14.268 9.912 14.172 9.936 14.088 9.948C13.98 9.972 12.3 11.088 9.024 13.296C8.544 13.62 8.112 13.788 7.728 13.776C7.296 13.764 6.48 13.536 5.868 13.332C5.112 13.092 4.524 12.96 4.572 12.54C4.596 12.324 4.896 12.108 5.46 11.88C8.964 10.356 11.292 9.348 12.456 8.868C15.792 7.476 16.476 7.236 16.932 7.236C17.028 7.236 17.256 7.26 17.4 7.38C17.52 7.476 17.556 7.608 17.568 7.704C17.556 7.776 17.58 7.992 17.568 8.16Z"
@@ -215,7 +215,7 @@
 							</a>
 						</li>
 						<li class="site-footer__top-item">
-							<a class="site-footer__top-link" href="https://t.me/tensai1502" target="_blank">
+							<a class="site-footer__top-link" href="https://t.me/muhammad_2807" target="_blank">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M22.675 0H1.325C0.593 0 0 0.593 0 1.325V22.676C0 23.407 0.593 24 1.325 24H12.82V14.706H9.692V11.084H12.82V8.413C12.82 5.313 14.713 3.625 17.479 3.625C18.804 3.625 19.942 3.724 20.274 3.768V7.008L18.356 7.009C16.852 7.009 16.561 7.724 16.561 8.772V11.085H20.148L19.681 14.707H16.561V24H22.677C23.407 24 24 23.407 24 22.675V1.325C24 0.593 23.407 0 22.675 0Z"
@@ -224,7 +224,7 @@
 							</a>
 						</li>
 						<li class="site-footer__top-item">
-							<a class="site-footer__top-link" href="https://instagram/tursunov1.o.08" target="_blank">
+							<a class="site-footer__top-link" href="https://www.instagram.com/sakhiboov05/#" target="_blank">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										fill-rule="evenodd"
